--- a/service.html
+++ b/service.html
@@ -163,7 +163,10 @@
                         </div>
                         <div class="service-text rounded p-5">
                             <h5 class="mb-3">72-часовые курсы повышения квалификации для органов МСУ</h4>
-                            <p class="mb-4">Дата: 28 июля- 1 августа 2022 года. г.Бишкек</p>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore reiciendis ea, dolor labore amet veritatis numquam, quisquam ipsam magni nemo eaque iure sit distinctio rem, optio modi velit molestias sunt quod? Omnis.</p>
+                            <p>12/05/2023</p>
+                            <p>12/06/2023</p>
+                            <p>Finished</p>
                             <a class="btn btn-sm dop-info" href=""><i class="fa fa-plus text-primary me-2"></i>Подробнее</a>
                         </div>
                     </div>
@@ -175,7 +178,10 @@
                         </div>
                         <div class="service-text rounded p-5">
                             <h5 class="mb-3">Школа молодых фермеров</h4>
-                            <p class="mb-4">Дата: 1-2 августа 2022 года. Тонский район Основная технология выращивания картофеля. Работа с семенами</p>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore reiciendis ea, dolor labore amet veritatis numquam, quisquam ipsam magni nemo eaque iure sit distinctio rem, optio modi velit molestias sunt quod? Omnis.</p>
+                            <p>12/05/2023</p>
+                            <p>12/06/2023</p>
+                            <p>Finished</p>
                             <a class="btn btn-sm dop-info" href=""><i class="fa fa-plus text-primary me-2"></i>Подробнее</a>
                         </div>
                     </div>
@@ -187,7 +193,10 @@
                         </div>
                         <div class="service-text rounded p-5">
                             <h5 class="mb-3">Тренинг по разработке проектных предложений для привлечения финансирования</h4>
-                            <p class="mb-4">Участники: выпускники Фонда Ханнса Зайделя из Нарынской области 10-11 июня 2022 в г.Нарын</p>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore reiciendis ea, dolor labore amet veritatis numquam, quisquam ipsam magni nemo eaque iure sit distinctio rem, optio modi velit molestias sunt quod? Omnis.</p>
+                            <p>12/05/2023</p>
+                            <p>12/06/2023</p>
+                            <p>Finished</p>
                             <a class="btn btn-sm dop-info" href=""><i class="fa fa-plus text-primary me-2"></i>Подробнее</a>
                         </div>
                     </div>
@@ -201,7 +210,10 @@
                         </div>
                         <div class="service-text rounded p-5">
                             <h5 class="mb-3">Онлайн-конференция/семинар для личностного развития</h4>
-                            <p class="mb-4">Роберт Гарайссен 17 мая 2022 для регистрации отправьте уведомление на адрес omurkanova-b@hss.de</p>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore reiciendis ea, dolor labore amet veritatis numquam, quisquam ipsam magni nemo eaque iure sit distinctio rem, optio modi velit molestias sunt quod? Omnis.</p>
+                            <p>12/05/2023</p>
+                            <p>12/06/2023</p>
+                            <p>Finished</p>
                             <a class="btn btn-sm dop-info" href=""><i class="fa fa-plus text-primary me-2"></i>Подробнее</a>
                         </div>
                     </div>
@@ -213,7 +225,10 @@
                         </div>
                         <div class="service-text rounded p-5">
                             <h5 class="mb-3">Онлайн-тренинг для личностного развития на тему: «ЭГО! Завышенная самооценка и адекватная уверенность в себе» г-на Роберта Гарайссена</h4>
-                            <p class="mb-4">Дата и время: вторник, 28 июня 2022 г., в 18.30 (время для Бишкека)</p>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore reiciendis ea, dolor labore amet veritatis numquam, quisquam ipsam magni nemo eaque iure sit distinctio rem, optio modi velit molestias sunt quod? Omnis.</p>
+                            <p>12/05/2023</p>
+                            <p>12/06/2023</p>
+                            <p>Finished</p>
                             <a class="btn btn-sm dop-info" href=""><i class="fa fa-plus text-primary me-2"></i>Подробнее</a>
                         </div>
                     </div>
@@ -225,7 +240,10 @@
                         </div>
                         <div class="service-text rounded p-5">
                             <h5 class="mb-3">Онлайн-конференция/лекция на тему: «Структура государственного и местного управления в Баварии - обзор», г-н Раймунд Хельфрих</h4>
-                            <p class="mb-4">Дата и время : 7 июля 2022 года, 18:30</p>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore reiciendis ea, dolor labore amet veritatis numquam, quisquam ipsam magni nemo eaque iure sit distinctio rem, optio modi velit molestias sunt quod? Omnis.</p>
+                            <p>12/05/2023</p>
+                            <p>12/06/2023</p>
+                            <p>Finished</p>
                             <a class="btn btn-sm dop-info" href=""><i class="fa fa-plus text-primary me-2"></i>Подробнее</a>
                         </div>
                     </div>
