added new files

--- a/academy-kyrgyzstan.html
+++ b/academy-kyrgyzstan.html
@@ -46,11 +46,19 @@
             }
         }
 
-        #kazakhstan-section.active {
-            background-color: #267a8c; /* Замените этот цвет на желаемый */
+        /* #kazakhstan-section.active {
+            background-color: #267a8c; 
         }
 
         #kazakhstan-section.active .elementor-heading-title {
+            color: #fff; 
+        } */
+
+        #kyrgyzstan-section.active {
+            background-color: #267a8c; /* Замените этот цвет на желаемый */
+        }
+
+        #kyrgyzstan-section.active .elementor-heading-title {
             color: #fff; /* Белый цвет для текста */
         }
 
@@ -250,7 +258,7 @@
                     </section>
                 </a>
                 <a href="./academy-kyrgyzstan.html">
-                    <section id="kazakhstan-section"
+                    <section id="kyrgyzstan-section"
                         class="elementor-section elementor-inner-section elementor-element elementor-element-39402a4 elementor-section-boxed elementor-section-height-default elementor-section-height-default"
                         data-id="39402a4" data-element_type="section"
                         data-settings="{&quot;background_background&quot;:&quot;classic&quot;}">
