--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
                                         <div class="btn-square bg-light rounded-circle mx-auto mb-4" style="width: 90px; height: 90px;">
                                             <i class="fa fa-check fa-3x text-primary"></i>
                                         </div>
-                                        <h4 class="mb-0">База знаний</h4>
+                                        <a href="books.html"><h4 class="mb-0">Книги</h4></a>
                                     </div>
                                 </div>
                                 <div class="col-12 wow fadeIn" data-wow-delay="0.5s">
@@ -325,7 +325,7 @@
                                         <div class="btn-square bg-light rounded-circle mx-auto mb-4" style="width: 90px; height: 90px;">
                                             <i class="fa fa-users fa-3x text-primary"></i>
                                         </div>
-                                        <h4 class="mb-0">Стипендиальные программы</h4>
+                                        <a href="presentations.html"><h4 class="mb-0">Презентации</h4></a>
                                     </div>
                                 </div>
                             </div>
@@ -335,7 +335,7 @@
                                 <div class="btn-square bg-light rounded-circle mx-auto mb-4" style="width: 90px; height: 90px;">
                                     <i class="fa fa-tools fa-3x text-primary"></i>
                                 </div>
-                                <h4 class="mb-0">Разнообразие тренингов</h4>
+                                <a href="video.html"><h4 class="mb-0">Видео</h4></a>
                             </div>
                         </div>
                     </div>
