--- a/info.html
+++ b/info.html
@@ -157,7 +157,7 @@
                 <p class="fs-5 fw-bold text-primary">ВСТРЕЧИ ОДНОГРУППНИКОВ</p>
                 <h1 class="display-5 mb-5">Вклад Фонда Ханнса Зайделя</h1>
             </div>
-            <div class="portfolio-inner rounded" style="width: 500px; margin: 0 auto;">
+            <div class="portfolio-inner rounded wow fadeInUp" style="width: 500px; margin: 0 auto;">
                 <img class="img-fluid" src="img/service-1.jpg" alt="">
                 <div class="portfolio-text">
                     <!-- <h4 class="text-white mb-4">Landscaping</h4> -->
@@ -169,9 +169,9 @@
             </div>
             <br>
             <br>
-            <div style="max-width: 800px; margin-left: auto; margin-right: auto;">
+            <div class="wow fadeInUp" style="max-width: 800px; margin-left: auto; margin-right: auto;">
                 <h3>
-                    1. Расходы: ФХЗ может оплатить некоторые расходы, где есть образовательный аспект, повышения потенциала выпускниов : тренинги и лекции.
+                    1. Расходы: ФХЗ может оплатить некоторые расходы, где есть образовательный аспект, повышения потенциала выпускниов: тренинги и лекции.
                         <br>
                         ФХЗ может оплатить:
                         <br>
@@ -181,20 +181,20 @@
                         <br>
                         — подготовку сертификатов,
                         <br>
-                        — питание : обед, кофе-брейки и ужин — если продолжительность мероприятия 2 дня (максимум),
+                        — питание: обед, кофе-брейки и ужин — если продолжительность мероприятия 2 дня (максимум),
                         <br>
                         При необходимости ФХЗ может оплатить: 
                         <br>
                         гонорар тренеров/приглашенных экспертов, командировочные расходы тренеров (проживание и транспорт).
                     <br>
                     <br>
-                    2. Контакты : ФХЗ может предоставить контактные данные выпускников той или иной группы по письменному запросу (по электронной почте) организаторов встречи.
+                    2. Контакты: ФХЗ может предоставить контактные данные выпускников той или иной группы по письменному запросу (по электронной почте) организаторов встречи.
                     <br>
                     <br>
-                    3. Тренеры : ФХЗ может порекомендовать экспертов, тренеров или лекторов.
+                    3. Тренеры: ФХЗ может порекомендовать экспертов, тренеров или лекторов.
                     <br>
                     <br>
-                    4. Участие : ФХЗ может принять участие на встрече.
+                    4. Участие: ФХЗ может принять участие на встрече.
                     <br>
                     <br>
                     5. Материалы: ФХЗ может предоставить информационные материалы по теме встречи.
@@ -213,7 +213,7 @@
                 <h1 class="display-5 mb-5">Вклад выпускников</h1>
                 <p class="fs-5 fw-bold text-primary">Выпускники полностью ответственны за организацию встреч</p>
             </div>
-            <div class="portfolio-inner rounded" style="width: 500px; margin: 0 auto;">
+            <div class="portfolio-inner rounded wow fadeInUp" style="width: 500px; margin: 0 auto;">
                 <img class="img-fluid" src="img/service-2.jpg" alt="">
                 <div class="portfolio-text">
                     <!-- <h4 class="text-white mb-4">Landscaping</h4> -->
@@ -222,6 +222,38 @@
                         <!-- <a class="btn btn-lg-square rounded-circle mx-2" href=""><i class="fa fa-link"></i></a> -->
                     </div>
                 </div>
+            </div>
+            <br>
+            <br>
+            <div class="wow fadeInUp" style="max-width: 800px; margin-left: auto; margin-right: auto;">
+                <h3>
+                    1. Ответственные лица : выпускники сами выбирают ответственных людей для:
+                    <br>
+                    — сбора одногруппников,
+                    <br>
+                    — организации встречи,
+                    <br>
+                    — обеспечения безопасности одногруппников во время встречи,
+                    <br>
+                    — Информирования ФХЗ за 3 недели до встречи, если требуется материальная/нематериальная поддержка ФХЗ.
+                    <br>
+                    <br>
+                    2. Расходы: выпускники сами покрывают все расходы на проезд и проживание и другие непредвиденные расходы.
+                    <br>
+                    <br>
+                    3. Логистика: выпускники сами собирают своих одногруппников. Для получения контактных данных одногруппников, требуется письменный запрос в ФХЗ по электронной почте.
+                    <br>
+                    <br>
+                    4. Письмо — приглашение : при необходимости, представители ФХЗ и/или АГУПКР приглашаются на встречу в письменном виде за 3 недели.
+                    <br>
+                    <br>
+                    5. Публикация встречи: во время и/или после встречи, организаторы предоставляют ФХЗ информацию и фотографии со встречи для публикации на вебсайте и социальных сетях ФХЗ.
+                    <br>
+                    <br>
+                    Контактное лицо: Айсулу Мукамбетова pr-za@hss.de
+                    <br>
+                    +996 312 66 24 89 (109)
+                </h3>
             </div>
         </div>
     </div>
