--- a/contact.html
+++ b/contact.html
@@ -155,7 +155,7 @@
     <div class="container-xxl py-5">
         <div class="container">
             <div class="row g-5">
-                <p class="fs-5 fw-bold text-primary">Контакты</p>
+                <p class="fs-5 fw-bold text-primary wow fadeInUp">Контакты</p>
                 
                     <div class="col-lg-6 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                         <div class="service-item rounded d-flex mb-4">
@@ -166,7 +166,7 @@
                                 <!-- <div class="btn-square rounded-circle mx-auto mb-3">
                                     <img class="img-fluid" src="img/icon/icon-6.png" alt="Icon">
                                 </div> -->
-                                <h4 class="mb-4">Магистратура в Кыргызстане</h4>
+                                <h4 class="mb-4">Бишкек</h4>
                                 <div>
                                     <div class="pb-3">
 
@@ -190,42 +190,13 @@
 
                         <div class="service-item rounded d-flex mb-4">
                             <div class="service-img rounded ">
-                                <img class="img-fluid" src="img/kyrgyzstan.jpg" alt="">
+                                <img class="img-fluid" src="img/dushanbe.jpg" alt="">
                             </div>
                             <div class="service-text rounded p-5">
                                 <!-- <div class="btn-square rounded-circle mx-auto mb-3">
                                     <img class="img-fluid" src="img/icon/icon-6.png" alt="Icon">
                                 </div> -->
-                                <h4 class="mb-4">Магистратура в Кыргызстане</h4>
-                                <div>
-                                    <div class="pb-3">
-
-                                        <p class="mb-0">Бишкек. Иванова 75</p>
-                                        <p class="mb-0">Бишкек. Ксенова 57</p>
-                                    </div>
-
-                                    <div class="pb-3">
-
-                                        <p class="mb-0">nnursul@iscool.ru</p>
-                                        <p class="mb-0">purs@iscool.ru</p>
-                                    </div>
-
-                                    <div class="pb-3">
-                                        
-                                        <p class="mb-0">+996554546203</p>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="service-item rounded d-flex mb-4">
-                            <div class="service-img rounded ">
-                                <img class="img-fluid" src="img/kyrgyzstan.jpg" alt="">
-                            </div>
-                            <div class="service-text rounded p-5">
-                                <!-- <div class="btn-square rounded-circle mx-auto mb-3">
-                                    <img class="img-fluid" src="img/icon/icon-6.png" alt="Icon">
-                                </div> -->
-                                <h4 class="mb-4">Магистратура в Кыргызстане</h4>
+                                <h4 class="mb-4">Душанбе</h4>
                                 <div>
                                     <div class="pb-3">
 
