--- a/index.html
+++ b/index.html
@@ -312,32 +312,40 @@
                     <div class="row g-4 align-items-center">
                         <div class="col-md-6">
                             <div class="row g-4">
+                                <a href="books.html">
                                 <div class="col-12 wow fadeIn" data-wow-delay="0.3s">
                                     <div class="text-center rounded py-5 px-4" style="box-shadow: 0 0 45px rgba(0,0,0,.08);">
                                         <div class="btn-square bg-light rounded-circle mx-auto mb-4" style="width: 90px; height: 90px;">
                                             <i class="fa fa-check fa-3x text-primary"></i>
                                         </div>
-                                        <a href="books.html"><h4 class="mb-0">Книги</h4></a>
+                                        <h4 class="mb-0">Книги</h4>
                                     </div>
                                 </div>
+                                </a>
+                                <a href="presentations.html">
                                 <div class="col-12 wow fadeIn" data-wow-delay="0.5s">
                                     <div class="text-center rounded py-5 px-4" style="box-shadow: 0 0 45px rgba(0,0,0,.08);">
                                         <div class="btn-square bg-light rounded-circle mx-auto mb-4" style="width: 90px; height: 90px;">
                                             <i class="fa fa-users fa-3x text-primary"></i>
                                         </div>
-                                        <a href="presentations.html"><h4 class="mb-0">Презентации</h4></a>
+                                        <h4 class="mb-0">Презентации</h4>
                                     </div>
                                 </div>
+                                </a>
                             </div>
                         </div>
+                        
                         <div class="col-md-6 wow fadeIn" data-wow-delay="0.7s">
+                            <a href="video.html">
                             <div class="text-center rounded py-5 px-4" style="box-shadow: 0 0 45px rgba(0,0,0,.08);">
                                 <div class="btn-square bg-light rounded-circle mx-auto mb-4" style="width: 90px; height: 90px;">
                                     <i class="fa fa-tools fa-3x text-primary"></i>
                                 </div>
-                                <a href="video.html"><h4 class="mb-0">Видео</h4></a>
+                                <h4 class="mb-0">Видео</h4>
                             </div>
+                            </a>
                         </div>
+                        
                     </div>
                 </div>
             </div>
@@ -363,9 +371,9 @@
                             <!-- <div class="btn-square rounded-circle mx-auto mb-3">
                                 <img class="img-fluid" src="img/icon/icon-3.png" alt="Icon">
                             </div> -->
-                            <h4 class="mb-3">Магистратура в Казахстане</h4>
+                            <h5 class="mb-3">Магистратура в Казахстане</h5>
                             <p class="mb-4">Магистратура в Академии государственного управления при Президенте Республики Казахстан</p>
-                            <a class="btn btn-sm" href=""><i class="fa fa-plus text-primary me-2"></i>Подробнее</a>
+                            <a class="btn btn-sm" href="academy-kazakhstan.html"><i class="fa fa-plus text-primary me-2"></i>Подробнее</a>
                         </div>
                     </div>
                 </div>
@@ -378,9 +386,9 @@
                             <!-- <div class="btn-square rounded-circle mx-auto mb-3">
                                 <img class="img-fluid" src="img/icon/icon-6.png" alt="Icon">
                             </div> -->
-                            <h4 class="mb-3">Магистратура в Кыргызстане</h4>
+                            <h5 class="mb-3">Магистратура в Кыргызстане</h5>
                             <p class="mb-4">Магистратура в Академии государственного управления при Президенте Кыргызской Республики</p>
-                            <a class="btn btn-sm" href=""><i class="fa fa-plus text-primary me-2"></i>Подробнее</a>
+                            <a class="btn btn-sm dop-info" href="" class="dop-info"><i class="fa fa-plus text-primary me-2"></i><span class="dop-info__btn-text">Подробнее</span></a>
                         </div>
                     </div>
                 </div>
@@ -393,57 +401,12 @@
                             <!-- <div class="btn-square rounded-circle mx-auto mb-3">
                                 <img class="img-fluid" src="img/icon/icon-5.png" alt="Icon">
                             </div> -->
-                            <h4 class="mb-3">Стипендия в Германии</h4>
+                            <h5 class="mb-3">Стипендия в Германии</h5>
                             <p class="mb-4">Стипендия Фонда Ханнса Зайделя в Германии для одаренных молодых людей из развивающихся стран </p>
-                            <a class="btn btn-sm" href=""><i class="fa fa-plus text-primary me-2"></i>Подробнее</a>
+                            <a class="btn btn-sm dop-info" href=""><i class="fa fa-plus text-primary me-2"></i>Подробнее</a>
                         </div>
                     </div>
                 </div>
-                <!-- <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
-                    <div class="service-item rounded d-flex h-100">
-                        <div class="service-img rounded">
-                            <img class="img-fluid" src="img/service-4.jpg" alt="">
-                        </div>
-                        <div class="service-text rounded p-5">
-                            <div class="btn-square rounded-circle mx-auto mb-3">
-                                <img class="img-fluid" src="img/icon/icon-4.png" alt="Icon">
-                            </div>
-                            <h4 class="mb-3">Магистратура в Таджикистане</h4>
-                            <p class="mb-4">Магистратура в Академии государственного управления при Президенте Республики Таджикистан</p>
-                            <a class="btn btn-sm" href=""><i class="fa fa-plus text-primary me-2"></i>Подробнее</a>
-                        </div>
-                    </div>
-                </div> -->
-                <!-- <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
-                    <div class="service-item rounded d-flex h-100">
-                        <div class="service-img rounded">
-                            <img class="img-fluid" src="img/service-5.jpg" alt="">
-                        </div>
-                        <div class="service-text rounded p-5">
-                            <div class="btn-square rounded-circle mx-auto mb-3">
-                                <img class="img-fluid" src="img/icon/icon-8.png" alt="Icon">
-                            </div>
-                            <h4 class="mb-3">Магистратура в Кыргызстане</h4>
-                            <p class="mb-4">Магистратура в УНПК МУК</p>
-                            <a class="btn btn-sm" href=""><i class="fa fa-plus text-primary me-2"></i>Подробнее</a>
-                        </div>
-                    </div>
-                </div> -->
-                <!-- <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
-                    <div class="service-item rounded d-flex h-100">
-                        <div class="service-img rounded">
-                            <img class="img-fluid" src="img/service-6.jpg" alt="">
-                        </div>
-                        <div class="service-text rounded p-5">
-                            <div class="btn-square rounded-circle mx-auto mb-3">
-                                <img class="img-fluid" src="img/icon/icon-2.png" alt="Icon">
-                            </div>
-                            <h4 class="mb-3">Urban Gardening</h4>
-                            <p class="mb-4">Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam sed stet.</p>
-                            <a class="btn btn-sm" href=""><i class="fa fa-plus text-primary me-2"></i>Read More</a>
-                        </div>
-                    </div>
-                </div> -->
             </div>
         </div>
     </div>
