--- a/presentations.html
+++ b/presentations.html
@@ -142,9 +142,8 @@
             <h1 class="display-3 text-white mb-4 animated slideInDown">Презентации</h1>
             <nav aria-label="breadcrumb animated slideInDown">
                 <ol class="breadcrumb justify-content-center mb-0">
-                    <li class="breadcrumb-item"><a href="#">Главная</a></li>
-                    <li class="breadcrumb-item"><a href="#">База знаний</a></li>
-                    <li class="breadcrumb-item active" aria-current="page">Презентации</li>
+                    <li class="breadcrumb-item"><a href="books.html">Книги</a></li>
+                    <li class="breadcrumb-item"><a href="video.html">Видео</a></li>
                 </ol>
             </nav>
         </div>
