--- a/QA.html
+++ b/QA.html
@@ -97,10 +97,10 @@
                 <a href="index.html" class="nav-item nav-link">Главная</a>
                 <a href="about.html" class="nav-item nav-link">Новости</a>
                 <a href="service.html" class="nav-item nav-link">Тренинги</a>
-                <a href="project.html" class="nav-item nav-link">Стипендиальные Программы</a>
-                <a href="QA.html" class="nav-item nav-link active">Вопросы и Ответы</a>
+                <a href="project.html" class="nav-item nav-link">Стипендиальные программы</a>
+                <a href="QA.html" class="nav-item nav-link active">Вопросы и ответы</a>
                 <div class="nav-item dropdown">
-                    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">База Знаний</a>
+                    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">База знаний</a>
                     <div class="dropdown-menu bg-light m-0">
                         <a href="books.html" class="dropdown-item">Книги</a>
                         <a href="presentations.html" class="dropdown-item">Презентации</a>
@@ -108,14 +108,14 @@
                     </div>
                 </div>
                 <div class="nav-item dropdown">
-                    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">О Нас</a>
+                    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">О нас</a>
                     <div class="dropdown-menu bg-light m-0">
-                        <a href="team.html" class="dropdown-item">Наша Команда</a>
+                        <a href="team.html" class="dropdown-item">Наша команда</a>
                         <a href="testimonials.html" class="dropdown-item">Отзызы</a>
                         <a href="contact.html" class="dropdown-item nav-item">Контакты</a>
                     </div>
                 </div>
-                <a href="info.html" class="nav-item nav-link">Информация Для Выпускников</a>
+                <a href="info.html" class="nav-item nav-link">Информация для выпускников</a>
                 <!-- <div class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
                     <div class="dropdown-menu bg-light m-0">
@@ -127,7 +127,7 @@
                     </div>
                 </div> -->
             </div>
-            <a href="" class="btn btn-primary py-4 px-lg-4 rounded-0 d-none d-lg-block">Задать вопрос<i class="fa fa-arrow-right ms-3"></i></a>
+            <a href="quote.html" class="btn btn-primary py-4 px-lg-4 rounded-0 d-none d-lg-block">Задать вопрос<i class="fa fa-arrow-right ms-3"></i></a>
         </div>
     </nav>
     <!-- Navbar End -->
