--- a/academy-kyrgyzstan.html
+++ b/academy-kyrgyzstan.html
@@ -150,7 +150,7 @@
                 <a href="index.html" class="nav-item nav-link">Главная</a>
                 <a href="about.html" class="nav-item nav-link">Новости</a>
                 <a href="service.html" class="nav-item nav-link">Тренинги</a>
-                <a href="project.html" class="nav-item nav-link">Стипендиальные Программы</a>
+                <a href="project.html" class="nav-item nav-link active">Стипендиальные Программы</a>
                 <a href="QA.html" class="nav-item nav-link">Вопросы и Ответы</a>
                 <div class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">База Знаний</a>
