--- a/books.html
+++ b/books.html
@@ -97,10 +97,10 @@
                 <a href="index.html" class="nav-item nav-link">Главная</a>
                 <a href="about.html" class="nav-item nav-link">Новости</a>
                 <a href="service.html" class="nav-item nav-link">Тренинги</a>
-                <a href="project.html" class="nav-item nav-link">Стипендиальные Программы</a>
-                <a href="QA.html" class="nav-item nav-link">Вопросы и Ответы</a>
+                <a href="project.html" class="nav-item nav-link">Стипендиальные программы</a>
+                <a href="QA.html" class="nav-item nav-link">Вопросы и ответы</a>
                 <div class="nav-item dropdown">
-                    <a href="#" class="nav-link dropdown-toggle active" data-bs-toggle="dropdown">База Знаний</a>
+                    <a href="#" class="nav-link dropdown-toggle active" data-bs-toggle="dropdown">База знаний</a>
                     <div class="dropdown-menu bg-light m-0">
                         <a href="books.html" class="dropdown-item active">Книги</a>
                         <a href="presentations.html" class="dropdown-item">Презентации</a>
@@ -111,12 +111,12 @@
                 <div class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">О Нас</a>
                     <div class="dropdown-menu bg-light m-0">
-                        <a href="team.html" class="dropdown-item">Наша Команда</a>
+                        <a href="team.html" class="dropdown-item">Наша команда</a>
                         <a href="testimonials.html" class="dropdown-item">Отзызы</a>
                         <a href="contact.html" class="dropdown-item nav-item">Контакты</a>
                     </div>
                 </div>
-                <a href="info.html" class="nav-item nav-link">Информация Для Выпускников</a>
+                <a href="info.html" class="nav-item nav-link">Информация для выпускников</a>
 
                 <!-- <div class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
@@ -141,9 +141,8 @@
             <h1 class="display-3 text-white mb-4 animated slideInDown">Книги</h1>
             <nav aria-label="breadcrumb animated slideInDown">
                 <ol class="breadcrumb justify-content-center mb-0">
-                    <li class="breadcrumb-item"><a href="#">Главная</a></li>
-                    <li class="breadcrumb-item"><a href="#">База Знаний</a></li>
-                    <li class="breadcrumb-item active" aria-current="page">Книги</li>
+                    <li class="breadcrumb-item"><a href="presentations.html">Презентации</a></li>
+                    <li class="breadcrumb-item"><a href="video.html">Видео</a></li>
                 </ol>
             </nav>
         </div>
