--- a/contact.html
+++ b/contact.html
@@ -141,9 +141,9 @@
             <h1 class="display-3 text-white mb-4 animated slideInDown">Контакты</h1>
             <nav aria-label="breadcrumb animated slideInDown">
                 <ol class="breadcrumb justify-content-center mb-0">
-                    <li class="breadcrumb-item"><a href="#">Home</a></li>
-                    <li class="breadcrumb-item"><a href="#">Pages</a></li>
-                    <li class="breadcrumb-item active" aria-current="page">Contact</li>
+                    <li class="breadcrumb-item"><a href="index.html">Главная</a></li>
+                    <li class="breadcrumb-item"><a href="about.html">Новости</a></li>
+                    <!-- <li class="breadcrumb-item active" aria-current="page">Contact</li> -->
                 </ol>
             </nav>
         </div>
