--- a/index.html
+++ b/index.html
@@ -313,20 +313,20 @@
                         <div class="col-md-6">
                             <div class="row g-4">
                                 <a href="books.html">
-                                <div class="col-12 wow fadeIn" data-wow-delay="0.3s">
-                                    <div class="text-center rounded py-5 px-4" style="box-shadow: 0 0 45px rgba(0,0,0,.08);">
+                                <div class="col-12 wow fadeIn now-shadow" data-wow-delay="0.3s">
+                                    <div class="text-center rounded py-5 px-4">
                                         <div class="btn-square bg-light rounded-circle mx-auto mb-4" style="width: 90px; height: 90px;">
-                                            <i class="fa fa-check fa-3x text-primary"></i>
+                                            <i class="bi bi-book-fill fa-3x text-primary"></i>
                                         </div>
                                         <h4 class="mb-0">Книги</h4>
                                     </div>
                                 </div>
                                 </a>
                                 <a href="presentations.html">
-                                <div class="col-12 wow fadeIn" data-wow-delay="0.5s">
-                                    <div class="text-center rounded py-5 px-4" style="box-shadow: 0 0 45px rgba(0,0,0,.08);">
+                                <div class="col-12 wow fadeIn now-shadow" data-wow-delay="0.5s">
+                                    <div class="text-center rounded py-5 px-4">
                                         <div class="btn-square bg-light rounded-circle mx-auto mb-4" style="width: 90px; height: 90px;">
-                                            <i class="fa fa-users fa-3x text-primary"></i>
+                                            <i class="bi bi-file-earmark-easel-fill fa-3x text-primary"></i>
                                         </div>
                                         <h4 class="mb-0">Презентации</h4>
                                     </div>
@@ -334,12 +334,11 @@
                                 </a>
                             </div>
                         </div>
-                        
-                        <div class="col-md-6 wow fadeIn" data-wow-delay="0.7s">
+                        <div class="col-md-6 wow fadeIn now-shadow" data-wow-delay="0.7s">
                             <a href="video.html">
-                            <div class="text-center rounded py-5 px-4" style="box-shadow: 0 0 45px rgba(0,0,0,.08);">
+                            <div class="text-center rounded py-5 px-4">
                                 <div class="btn-square bg-light rounded-circle mx-auto mb-4" style="width: 90px; height: 90px;">
-                                    <i class="fa fa-tools fa-3x text-primary"></i>
+                                    <i class="bi bi-camera-video-fill fa-3x text-primary"></i>
                                 </div>
                                 <h4 class="mb-0">Видео</h4>
                             </div>
