--- a/quote.html
+++ b/quote.html
@@ -30,24 +30,6 @@
 
     <!-- Template Stylesheet -->
     <link href="css/style.css" rel="stylesheet">
-
-
-    <style>
-        .dropdown-item{
-            transition: 0.9s;
-        }
-
-        .dropdown-item:hover{
-            color: #497bb4;
-        }
-        @media (max-width: 991px) {
-            .navbar-collapse {
-                background-color: white;
-            }
-        }
-    </style>
-
-
 </head>
 
 <body>
@@ -56,33 +38,6 @@
         <div class="spinner-border text-primary" role="status" style="width: 3rem; height: 3rem;"></div>
     </div>
     <!-- Spinner End -->
-
-
-    <!-- Topbar Start -->
-    <div class="container-fluid bg-dark text-light px-0 py-2">
-        <div class="row gx-0 d-none d-lg-flex">
-            <div class="col-lg-7 px-5 text-start">
-                <div class="h-100 d-inline-flex align-items-center me-4">
-                    <!-- <span class="fa fa-phone-alt me-2"></span> -->
-                    <!-- <span>+012 345 6789</span> -->
-                </div>
-                <div class="h-100 d-inline-flex align-items-center">
-                    <!-- <span class="far fa-envelope me-2"></span> -->
-                    <!-- <span>info@example.com</span> -->
-                </div>
-            </div>
-            <div class="col-lg-5 px-5 text-end">
-                <div class="h-100 d-inline-flex align-items-center mx-n2">
-                    <span>Подписывайтесь на нас:</span>
-                    <a class="btn btn-link text-light" href="https://www.facebook.com/HannsSeidelStiftungZentralasien/"><i class="fab fa-facebook-f"></i></a>
-                    <a class="btn btn-link text-light" href="https://twitter.com/hsfoundationca"><i class="fab fa-twitter"></i></a>
-                    <!-- <a class="btn btn-link text-light" href=""><i class="fab fa-linkedin-in"></i></a> -->
-                    <a class="btn btn-link text-light" href="https://www.instagram.com/hanns_seidel_foundation_ca/"><i class="fab fa-instagram"></i></a>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- Topbar End -->
 
     <!-- Navbar Start -->
     <nav class="navbar navbar-expand-lg bg-white navbar-light sticky-top p-0">
@@ -97,26 +52,26 @@
                 <a href="index.html" class="nav-item nav-link">Главная</a>
                 <a href="about.html" class="nav-item nav-link">Новости</a>
                 <a href="service.html" class="nav-item nav-link">Тренинги</a>
-                <a href="project.html" class="nav-item nav-link">Стипендиальные Программы</a>
-                <a href="QA.html" class="nav-item nav-link">Вопросы и Ответы</a>
+                <a href="project.html" class="nav-item nav-link">Стипендиальные программы</a>
+                <a href="QA.html" class="nav-item nav-link">Вопросы и ответы</a>
                 <div class="nav-item dropdown">
-                    <a href="#" class="nav-link dropdown-toggle active" data-bs-toggle="dropdown">База Знаний</a>
+                    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">База знаний</a>
                     <div class="dropdown-menu bg-light m-0">
                         <a href="books.html" class="dropdown-item">Книги</a>
                         <a href="presentations.html" class="dropdown-item">Презентации</a>
-                        <a href="video.html" class="dropdown-item active">Видео</a>
+                        <a href="video.html" class="dropdown-item">Видео</a>
                         <a href="404.html" class="dropdown-item">404 Page</a>
                     </div>
                 </div>
                 <div class="nav-item dropdown">
-                    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">О Нас</a>
+                    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">О нас</a>
                     <div class="dropdown-menu bg-light m-0">
-                        <a href="team.html" class="dropdown-item">Наша Команда</a>
+                        <a href="team.html" class="dropdown-item">Наша команда</a>
                         <a href="testimonials.html" class="dropdown-item">Отзызы</a>
                         <a href="contact.html" class="dropdown-item nav-item">Контакты</a>
                     </div>
                 </div>
-                <a href="info.html" class="nav-item nav-link">Информация Для Выпускников</a>
+                <a href="info.html" class="nav-item nav-link">Информация для выпускников</a>
 
                 <!-- <div class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
@@ -129,7 +84,7 @@
                     </div>
                 </div> -->
             </div>
-            <a href="quote.html" class="btn btn-primary py-4 px-lg-4 rounded-0 d-none d-lg-block">Задать вопрос<i class="fa fa-arrow-right ms-3"></i></a>
+            <a href="quote.html" class="btn btn-primary py-4 px-lg-4 rounded-0 d-none d-lg-block active">Задать вопрос<i class="fa fa-arrow-right ms-3"></i></a>
         </div>
     </nav>
     <!-- Navbar End -->
@@ -138,43 +93,71 @@
     <!-- Page Header Start -->
     <div class="container-fluid page-header py-5 mb-5 wow fadeIn" data-wow-delay="0.1s">
         <div class="container text-center py-5">
-            <h1 class="display-3 text-white mb-4 animated slideInDown">Видео</h1>
+            <h1 class="display-3 text-white mb-4 animated slideInDown">Задать вопрос</h1>
             <nav aria-label="breadcrumb animated slideInDown">
                 <ol class="breadcrumb justify-content-center mb-0">
-                    <li class="breadcrumb-item"><a href="books.html">Книги</a></li>
-                    <li class="breadcrumb-item"><a href="presentations.html">Презентации</a></li>
+                    <li class="breadcrumb-item"><a href="#">Home</a></li>
+                    <li class="breadcrumb-item"><a href="#">Pages</a></li>
+                    <li class="breadcrumb-item active" aria-current="page">Free Quote</li>
                 </ol>
             </nav>
         </div>
     </div>
     <!-- Page Header End -->
 
-    <div class="container">
-        <div class="row mb-5">
-            <div class="col-6">
-                <h5>Some title</h5>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Amet velit tempore deserunt, dolorum assumenda dolor aliquam culpa omnis consequatur laboriosam suscipit perferendis reprehenderit illo dicta accusamus, expedita, aperiam optio! Tempore, perspiciatis omnis?</p>
-                <p>date: 03/30/3030</p>
-                <p>Лектор: Борис Павлович Демидович</p>
+
+    <!-- Quote Start -->
+    <div class="container-fluid py-5">
+        <div class="container">
+            <div class="text-center mx-auto wow fadeInUp" data-wow-delay="0.1s" style="max-width: 500px;">
+                <p class="fs-5 fw-bold text-primary">Free Quote</p>
+                <h1 class="display-5 mb-5">Get A Free Quote</h1>
             </div>
-            <div class="col-6">
-                <iframe height="300px" width="580px"   src="https://www.youtube.com/embed/tgbNymZ7vqY">
-                </iframe> 
-            </div>
-        </div>
-        <div class="row mb-5">
-            <div class="col-6">
-                <iframe height="300px" width="580px"   src="https://www.youtube.com/embed/tgbNymZ7vqY">
-                </iframe> 
-            </div>
-            <div class="col-6">
-                <h5>Some title</h5>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Amet velit tempore deserunt, dolorum assumenda dolor aliquam culpa omnis consequatur laboriosam suscipit perferendis reprehenderit illo dicta accusamus, expedita, aperiam optio! Tempore, perspiciatis omnis?</p>
-                <p>date: 03/30/3030</p>
-                <p>Лектор: Борис Павлович Демидович</p>
+            <div class="row justify-content-center">
+                <div class="col-lg-7">
+                    <div class="bg-light rounded p-4 p-sm-5 wow fadeInUp" data-wow-delay="0.1s">
+                        <div class="row g-3">
+                            <div class="col-sm-6">
+                                <div class="form-floating">
+                                    <input type="text" class="form-control border-0" id="gname" placeholder="Gurdian Name">
+                                    <label for="gname">Your Name</label>
+                                </div>
+                            </div>
+                            <div class="col-sm-6">
+                                <div class="form-floating">
+                                    <input type="email" class="form-control border-0" id="gmail" placeholder="Gurdian Email">
+                                    <label for="gmail">Your Email</label>
+                                </div>
+                            </div>
+                            <div class="col-sm-6">
+                                <div class="form-floating">
+                                    <input type="text" class="form-control border-0" id="cname" placeholder="Child Name">
+                                    <label for="cname">Your Mobile</label>
+                                </div>
+                            </div>
+                            <div class="col-sm-6">
+                                <div class="form-floating">
+                                    <input type="text" class="form-control border-0" id="cage" placeholder="Child Age">
+                                    <label for="cage">Service Type</label>
+                                </div>
+                            </div>
+                            <div class="col-12">
+                                <div class="form-floating">
+                                    <textarea class="form-control border-0" placeholder="Leave a message here" id="message" style="height: 100px"></textarea>
+                                    <label for="message">Message</label>
+                                </div>
+                            </div>
+                            <div class="col-12 text-center">
+                                <button class="btn btn-primary py-3 px-4" type="submit">Submit Now</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
+    <!-- Quote End -->
+
 
     <!-- Footer Start -->
     <div class="container-fluid bg-dark text-light footer mt-5 py-5 wow fadeIn" data-wow-delay="0.1s">
@@ -215,16 +198,6 @@
                         <input class="form-control bg-light border-light w-100 py-3 ps-4 pe-5" type="text" placeholder="Your email">
                         <button type="button" class="btn btn-primary py-2 position-absolute top-0 end-0 mt-2 me-2">SignUp</button>
                     </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- Copyright Start -->
-    <div class="container-fluid copyright py-4">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12 text-center mb-3 mb-md-0">
-                    <a class="border-bottom" href="#"></a>© 2023 Фонд Ханнса Зайделя. Все права защищены.
                 </div>
             </div>
         </div>
