--- a/quote.html
+++ b/quote.html
@@ -96,9 +96,9 @@
             <h1 class="display-3 text-white mb-4 animated slideInDown">Задать вопрос</h1>
             <nav aria-label="breadcrumb animated slideInDown">
                 <ol class="breadcrumb justify-content-center mb-0">
-                    <li class="breadcrumb-item"><a href="#">Home</a></li>
-                    <li class="breadcrumb-item"><a href="#">Pages</a></li>
-                    <li class="breadcrumb-item active" aria-current="page">Free Quote</li>
+                    <li class="breadcrumb-item"><a href="index.html">Главная</a></li>
+                    <li class="breadcrumb-item"><a href="about.html">Новости</a></li>
+                    <!-- <li class="breadcrumb-item active" aria-current="page">Free Quote</li> -->
                 </ol>
             </nav>
         </div>
@@ -110,8 +110,8 @@
     <div class="container-fluid py-5">
         <div class="container">
             <div class="text-center mx-auto wow fadeInUp" data-wow-delay="0.1s" style="max-width: 500px;">
-                <p class="fs-5 fw-bold text-primary">Free Quote</p>
-                <h1 class="display-5 mb-5">Get A Free Quote</h1>
+                <!-- <p class="fs-5 fw-bold text-primary">Free Quote</p> -->
+                <h1 class="display-5 mb-5">Ваш вопрос</h1>
             </div>
             <div class="row justify-content-center">
                 <div class="col-lg-7">
@@ -120,35 +120,35 @@
                             <div class="col-sm-6">
                                 <div class="form-floating">
                                     <input type="text" class="form-control border-0" id="gname" placeholder="Gurdian Name">
-                                    <label for="gname">Your Name</label>
+                                    <label for="gname">Введите ваше имя</label>
                                 </div>
                             </div>
                             <div class="col-sm-6">
                                 <div class="form-floating">
                                     <input type="email" class="form-control border-0" id="gmail" placeholder="Gurdian Email">
-                                    <label for="gmail">Your Email</label>
+                                    <label for="gmail">Введите эл. адрес</label>
                                 </div>
                             </div>
                             <div class="col-sm-6">
                                 <div class="form-floating">
                                     <input type="text" class="form-control border-0" id="cname" placeholder="Child Name">
-                                    <label for="cname">Your Mobile</label>
+                                    <label for="cname">Введите ваш номер телефона</label>
                                 </div>
                             </div>
                             <div class="col-sm-6">
                                 <div class="form-floating">
                                     <input type="text" class="form-control border-0" id="cage" placeholder="Child Age">
-                                    <label for="cage">Service Type</label>
+                                    <label for="cage">Введите тему вопроса</label>
                                 </div>
                             </div>
                             <div class="col-12">
                                 <div class="form-floating">
                                     <textarea class="form-control border-0" placeholder="Leave a message here" id="message" style="height: 100px"></textarea>
-                                    <label for="message">Message</label>
+                                    <label for="message">Введите ваш вопрос</label>
                                 </div>
                             </div>
                             <div class="col-12 text-center">
-                                <button class="btn btn-primary py-3 px-4" type="submit">Submit Now</button>
+                                <button class="btn btn-primary py-3 px-4" type="submit">Отправить</button>
                             </div>
                         </div>
                     </div>
