--- a/QA.html
+++ b/QA.html
@@ -42,8 +42,14 @@
             color: #497bb4;
         }
         @media (max-width: 991px) {
-                .navbar-collapse {
-                    background-color: white;
+            .navbar-collapse {
+                background-color: white;
+            }
+            /* #accordion-button-1 .accordion-title:hover {
+                color: black;
+            } */
+            .accordion button[aria-expanded="true"]:hover {
+                color:black;
             }
         }
     </style>
