--- a/index.html
+++ b/index.html
@@ -32,6 +32,13 @@
     <link href="css/style.css" rel="stylesheet">
 
 
+    <!-- Bootstrap CSS -->
+    <!-- <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet"> -->
+
+    <!-- Bootstrap JS, Popper.js и jQuery -->
+    <!-- <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script> -->
+    <!-- <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script> -->
+    <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script> -->
 
     <style>
         .dropdown-item{
@@ -42,8 +49,12 @@
             color: #497bb4;
         }
         @media (max-width: 991px) {
-                .navbar-collapse {
-                    background-color: white;
+            .navbar-collapse {
+                background-color: white;
+            }
+            .now-shadow:hover{
+                box-shadow: 0 0 45px rgba(0,0,0,.08);
+                transition-duration: 1s;
             }
         }
     </style>
