--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Gardener - Gardening Website Template</title>
+    <title>Фонда Ханнса Зайделя</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
@@ -158,7 +158,7 @@
                         <div class="container">
                             <div class="row justify-content-center">
                                 <div class="col-lg-8">
-                                    <h1 class="display-1 text-white mb-5 animated slideInDown">Учебная платформа Фонда Ханнса Зайделя в ЦА</h1>
+                                    <h1 class="display-1 text-white mb-5 animated slideInDown">Учебная платформа Фонда Ханнса Зайделя в Центральной Азии</h1>
                                     <a href="" class="btn btn-primary py-sm-3 px-sm-4">Подробнее</a>
                                 </div>
                             </div>
