--- a/video.html
+++ b/video.html
@@ -150,7 +150,7 @@
     <!-- Page Header End -->
 
     <div class="container">
-        <div class="row mb-5">
+        <div class="row border-bottom">
             <div class="col-6">
                 <h5>Some title</h5>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Amet velit tempore deserunt, dolorum assumenda dolor aliquam culpa omnis consequatur laboriosam suscipit perferendis reprehenderit illo dicta accusamus, expedita, aperiam optio! Tempore, perspiciatis omnis?</p>
@@ -162,6 +162,7 @@
                 </iframe> 
             </div>
         </div>
+
         <div class="row mb-5">
             <div class="col-6">
                 <iframe height="300px" width="580px"   src="https://www.youtube.com/embed/tgbNymZ7vqY">
