--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                             <div class="row justify-content-center">
                                 <div class="col-lg-8">
                                     <h1 class="display-1 text-white mb-5 animated slideInDown">Учебная платформа Фонда Ханнса Зайделя в Центральной Азии</h1>
-                                    <a href="" class="btn btn-primary py-sm-3 px-sm-4">Подробнее</a>
+                                    <a href="project.html" class="btn btn-primary py-sm-3 px-sm-4">Подробнее</a>
                                 </div>
                             </div>
                         </div>
@@ -172,7 +172,7 @@
                             <div class="row justify-content-center">
                                 <div class="col-lg-7">
                                     <h1 class="display-1 text-white mb-5 animated slideInDown">Учебная платформа Фонда Ханнса Зайделя в ЦА</h1>
-                                    <a href="" class="btn btn-primary py-sm-3 px-sm-4">Подробнее</a>
+                                    <a href="project.html" class="btn btn-primary py-sm-3 px-sm-4">Подробнее</a>
                                 </div>
                             </div>
                         </div>
@@ -251,13 +251,13 @@
                     <img class="img-fluid rounded" data-wow-delay="0.1s" src="img/about.jpg">
                 </div>
                 <div class="col-lg-6 col-md-7 wow fadeInUp" data-wow-delay="0.3s">
-                    <h1 class="display-1 text-primary mb-0">25</h1>
-                    <p class="text-primary mb-4">ЛЕТ</p>
+                    <h1 class="display-1 text-primary mb-0">поставте свои цифры</h1>
+                    <p class="text-primary mb-4" style="font-size: 30px;">ЛЕТ</p>
                     <h1 class="display-5 mb-4">Наша деятельность</h1>
                     <p class="mb-4">Понимание демократии
                         должно в каждом поколении формироваться заново
                     </p>
-                    <a class="btn btn-primary py-3 px-4" href="">Подробнее</a>
+                    <a class="btn btn-primary py-3 px-4" href="project.html">Подробнее</a>
                 </div>
                 <div class="col-lg-3 col-md-12 wow fadeInUp" data-wow-delay="0.5s">
                     <div class="row g-5">
@@ -301,7 +301,7 @@
                 </div>
                 <div class="col-sm-6 col-lg-3 text-center wow fadeIn" data-wow-delay="0.7s">
                     <h1 class="display-4 text-white" data-toggle="counter-up">1200</h1>
-                    <span class="fs-5 fw-semi-bold text-light">Количество участников программ</span>
+                    <span class="fs-5 fw-semi-bold text-light">Посетили сайт</span>
                 </div>
             </div>
         </div>
@@ -317,7 +317,7 @@
                     <!-- <p class="fs-5 fw-bold text-primary">Why Choosing Us!</p> -->
                     <h1 class="display-5 mb-4">Уникальности нашей учебной платформы</h1>
                     <p class="mb-4">Учебная платформа призвана совершенствовать образовательный процесс по поддержке выпускников и стипендиатов программы Фонда Ханнса Зайделя.</p>
-                    <a class="btn btn-primary py-3 px-4" href="">Подробнее</a>
+                    <!-- <a class="btn btn-primary py-3 px-4" href="">Подробнее</a> -->
                 </div>
                 <div class="col-lg-6">
                     <div class="row g-4 align-items-center">
@@ -462,7 +462,7 @@
                                 </div>
                             </div>
                             <div class="col-12 text-center">
-                                <button class="btn btn-primary py-3 px-4" type="submit">Отправить</button>
+                                <button class="btn btn-primary py-3 px-4" type="submit" onclick="myfunc()">Отправить</button>
                             </div>
                         </div>
                     </div>
@@ -472,6 +472,11 @@
     </div>
     <!-- Quote End -->
 
+    <script>
+        function myfunc() {
+            window.location.href = '404.html';
+        }
+    </script>
 
     <!-- Footer Start -->
     <div class="container-fluid bg-dark text-light footer py-5 wow fadeIn" data-wow-delay="0.1s">
