--- a/video.html
+++ b/video.html
@@ -149,30 +149,47 @@
     </div>
     <!-- Page Header End -->
 
-    <div class="container">
-        <div class="row border-bottom">
-            <div class="col-6">
-                <h5>Some title</h5>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Amet velit tempore deserunt, dolorum assumenda dolor aliquam culpa omnis consequatur laboriosam suscipit perferendis reprehenderit illo dicta accusamus, expedita, aperiam optio! Tempore, perspiciatis omnis?</p>
-                <p>date: 03/30/3030</p>
-                <p>Лектор: Борис Павлович Демидович</p>
-            </div>
-            <div class="col-6">
-                <iframe height="300px" width="580px"   src="https://www.youtube.com/embed/tgbNymZ7vqY">
-                </iframe> 
-            </div>
-        </div>
+    <div class="container-xxl py-5">
+        <div class="container">
 
-        <div class="row mb-5">
-            <div class="col-6">
-                <iframe height="300px" width="580px"   src="https://www.youtube.com/embed/tgbNymZ7vqY">
-                </iframe> 
-            </div>
-            <div class="col-6">
-                <h5>Some title</h5>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Amet velit tempore deserunt, dolorum assumenda dolor aliquam culpa omnis consequatur laboriosam suscipit perferendis reprehenderit illo dicta accusamus, expedita, aperiam optio! Tempore, perspiciatis omnis?</p>
-                <p>date: 03/30/3030</p>
-                <p>Лектор: Борис Павлович Демидович</p>
+
+            <div class="row g-4 portfolio-container">
+                <div class="col-lg-4 col-md-6 portfolio-item second wow fadeInUp" data-wow-delay="0.5s">
+                    <div class="team-item rounded">
+                        <img class="img-fluid" src="http://img.youtube.com/vi/eJO5HU_7_1w/maxresdefault.jpg" alt="">
+                        <div class="">
+                            <br>
+                            <h4 class="mb-0"><a href="https://youtu.be/r_0JjYUe5jo"> Проектный менеджмент в государственном секторе </a></h4>
+                            <br>
+                            <p class="mb-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure, cum reiciendis ad et sed nam, cupiditate, nostrum incidunt laudantium inventore quas repudiandae. Architecto, doloribus!</p>
+                            <p class="text-primary">Книги</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 portfolio-item second wow fadeInUp" data-wow-delay="0.5s">
+                    <div class="team-item rounded">
+                        <img class="img-fluid" src="http://img.youtube.com/vi/eJO5HU_7_1w/maxresdefault.jpg" alt="">
+                        <div class="">
+                            <br>
+                            <h4 class="mb-0"><a href="https://youtu.be/r_0JjYUe5jo"> Проектный менеджмент в государственном секторе </a></h4>
+                            <br>
+                            <p class="mb-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure, cum reiciendis ad et sed nam, cupiditate, nostrum incidunt laudantium inventore quas repudiandae. Architecto, doloribus!</p>
+                            <p class="text-primary">Книги</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 portfolio-item second wow fadeInUp" data-wow-delay="0.5s">
+                    <div class="team-item rounded">
+                        <img class="img-fluid" src="http://img.youtube.com/vi/eJO5HU_7_1w/maxresdefault.jpg" alt="">
+                        <div class="">
+                            <br>
+                            <h4 class="mb-0"><a href="https://youtu.be/r_0JjYUe5jo"> Проектный менеджмент в государственном секторе </a></h4>
+                            <br>
+                            <p class="mb-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure, cum reiciendis ad et sed nam, cupiditate, nostrum incidunt laudantium inventore quas repudiandae. Architecto, doloribus!</p>
+                            <p class="text-primary">Книги</p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
